[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Travrse-Agent-Handler"
version = "0.0.1"
description = "Travrse AI Agent Handler for Development Planning"
authors = [
    {name = "IdeaBosque", email = "ideabosque@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "SilvaEngine-Utility",
    "AI-Agent-Handler",
    "httpx[http2]",
    "pendulum",
]
classifiers = [
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportOperatorIssue = "none"
